# Nexus

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Header/: AgentObject.h  Application.h  BallObject.h  Camera.h  FileLoader.h  FirsrPersonCamera.h  Fog.h  GameObject.h  IsoSurface.h  Light.h  Logger.h  MatrixStack.h  Mesh.h  MessageLogger.h  Object.h  OldShader.h  Shader.h  Texture2D.h  ThirdPersonCamera.h  Utill.h
Header/Geometry/2D/: NDCQuad.h  Rectangle.h  Square.h  Triangle.h
Header/Geometry/3D/: Cube.h  Cylinder.h  Sphere.h  ViewVolume.h
Header/Physics/: Collision.h
Header/Physics/Collision/Collider/: Collider.h  PlaneCollider.h  SphereCollider.h
Shaders/: lighting.frag  normal_visualization.gs  simple_lighting.frag  testing.frag
Source/: AgentObject.cpp  Application.cpp  BallObject.cpp  Camera.cpp  GameObject.cpp  IsoSurface.cpp  Logger.cpp  Main.cpp  Mesh.cpp  MessageLogger.cpp  Object.cpp  Shader.cpp  Texture2D.cpp  VolumeRendering.cpp
